tests/baselines/reference/constructorOverloadsWithDefaultValues.errors.txt
==== tests/cases/compiler/constructorOverloadsWithDefaultValues.ts (2 errors) ====
    class C {
        foo: string;
        constructor(x = 1); // error
                    ~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
        constructor() {
        }
    }
    
    class D<T> {
        foo: string;
        constructor(x = 1); // error
                    ~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
        constructor() {
        }
    }